# CoSphere-api

./: .gitignore  Cargo.toml
bruno/: Create user.bru  Get user.bru  Login user.bru  Temp.bru  Update Avatar.bru  Update user.bru  bruno.json
docs/: user.md
src/: errors.rs  main.rs
src/controllers/: user.rs
src/models/: user.rs
src/routes/: user.rs
