[package]
name = "CoSphere-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
argon2 = { version = "0.5.3", features = ["password-hash"] }
chrono = { version = "0.4.38", features = ["serde"] }
jsonwebtoken = "9.3.0"
mongodb = "3.0.1"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
